# LogicalGui

./: .gitignore  .travis.yml  CMakeLists.txt  LogicalGui.cpp  LogicalGui.h  README.md  TestCore.cpp  TestCore.h  TestGui.cpp  TestGui.h  test_main.cpp  tst_LogicalGui.cpp
cmake/: CodeCoverage.cmake
docs/: Doxyfile.in
example/: Core.cpp  Core.h  Gui.cpp  Gui.h  main.cpp
src/: LogicalGui.cpp  LogicalGui.h  LogicalGuiImpl.h  QObjectPrivate.h
test/: tst_LogicalGui.cpp
